--- a/style.css
+++ b/style.css
@@ -103,11 +103,18 @@ body * {
   left: 0;
   z-index: 1; /*Coloca o botão a sobre por o span.*/
   transform: translateY(-50%);
+
+  animation: slide-back 0.2s; /*Não precisa do forwards, pois se não seria redundante*/
 }
 
 .light #switch button {
-  right: 0;
-  left: initial;
+  /* right: 0;
+  left: initial;*/
+  animation: slide-in 0.2s forwards;
+}
+
+#switch button:hover {
+  outline: 8px solid var(--hightlight-color);
 }
 
 #switch span {
@@ -198,5 +205,24 @@ footer {
 
   .light {
     --bg-url: url(./assets/bg-desktop-light.jpg);
+  }
+}
+
+/*animation*/
+@keyframes slide-in {
+  from {
+    left: 0;
+  }
+  to {
+    left: 50%;
+  }
+}
+
+@keyframes slide-back {
+  from {
+    left: 50%;
+  }
+  to {
+    left: 0;
   }
 }
